chore(jsdoc): 优化jsdoc逻辑

--- a/packages/utils/stories/utils.stories.mdx
+++ b/packages/utils/stories/utils.stories.mdx
@@ -5,6 +5,28 @@ import { Meta } from '@storybook/addon-docs/blocks';
   parameters={{ previewTabs: { canvas: { hidden: true } },docsOnly:true }}
 />
 
+# @ba/utils
+
+## Install
+
+```bash
+npm i @ba/utils --registry=https://artifacts.iflytek.com/artifactory/api/npm/npm-repo/
+
+or
+
+yarn add @ba/utils --registry=https://artifacts.iflytek.com/artifactory/api/npm/npm-repo/
+```
+
+## Usage
+
+```js
+import { TODO } from '@ba/utils'
+```
+
+## API
+
+<!-- jsdoc2mdContentTag -->
+
 <a name="print"></a>
 
 ## print(msg) ⇒ <code>string</code>
@@ -17,4 +39,8 @@ import { Meta } from '@storybook/addon-docs/blocks';
 | Param | Type | Description |
 | --- | --- | --- |
 | msg | <code>string</code> | 信息 |
+
+
+
+<!-- jsdoc2mdContentTagEnd -->
 
