--- a/packages/hello/stories/hello.stories.mdx
+++ b/packages/hello/stories/hello.stories.mdx
@@ -5,6 +5,28 @@ import { Meta } from '@storybook/addon-docs/blocks';
   parameters={{ previewTabs: { canvas: { hidden: true } },docsOnly:true }}
 />
 
+# @ba/hello
+
+## Install
+
+```bash
+npm i @ba/hello --registry=https://artifacts.iflytek.com/artifactory/api/npm/npm-repo/
+
+or
+
+yarn add @ba/hello --registry=https://artifacts.iflytek.com/artifactory/api/npm/npm-repo/
+```
+
+## Usage
+
+```js
+import { TODO } from '@ba/hello'
+```
+
+## API
+
+<!-- jsdoc2mdContentTag -->
+
 <a name="hello"></a>
 
 ## hello(msg) ⇒ <code>string</code>
@@ -22,3 +44,7 @@ hello
 ```js
 hello('world')=> Hello world
 ```
+
+
+<!-- jsdoc2mdContentTagEnd -->
+
