chore(tpl): desensitization

--- a/packages/hello/stories/hello.stories.mdx
+++ b/packages/hello/stories/hello.stories.mdx
@@ -10,11 +10,11 @@ import { Meta } from '@storybook/addon-docs/blocks'
 ## Install
 
 ```bash
-npm i @ba/hello --registry=https://artifacts.iflytek.com/artifactory/api/npm/npm-repo/
+npm i @ba/hello
 
 or
 
-yarn add @ba/hello --registry=https://artifacts.iflytek.com/artifactory/api/npm/npm-repo/
+yarn add @ba/hello
 ```
 
 ## Usage
