--- a/packages/utils/stories/utils.stories.mdx
+++ b/packages/utils/stories/utils.stories.mdx
@@ -10,11 +10,11 @@ import { Meta } from '@storybook/addon-docs/blocks'
 ## Install
 
 ```bash
-npm i @ba/utils --registry=https://artifacts.iflytek.com/artifactory/api/npm/npm-repo/
+npm i @ba/utils
 
 or
 
-yarn add @ba/utils --registry=https://artifacts.iflytek.com/artifactory/api/npm/npm-repo/
+yarn add @ba/utils
 ```
 
 ## Usage
