fix(mdx): 修复mdx分类大小写错误

--- a/packages/utils/stories/utils.stories.mdx
+++ b/packages/utils/stories/utils.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta } from '@storybook/addon-docs/blocks'
 
 <Meta
-  title="Libs/utils"
+  title="Libs/BaUtils"
   parameters={{ previewTabs: { canvas: { hidden: true } }, docsOnly: true }}
 />
 
