--- a/packages/svg-assets/stories/svg-assets.stories.mdx
+++ b/packages/svg-assets/stories/svg-assets.stories.mdx
@@ -4,34 +4,34 @@ import svgList from '../src'
 import SvgTable from './svg-table'
 
 <Meta
-  title="Assets/HwSvgAssets"
+  title="Assets/BaSvgAssets"
   parameters={{ previewTabs: { canvas: { hidden: true } }, docsOnly: true }}
 />
 
-# @hw/svg-assets
+# @ba/svg-assets
 
 ## Install
 
 ```bash
-npm i @hw/svg-assets --registry=https://artifacts.iflytek.com/artifactory/api/npm/npm-repo/
+npm i @ba/svg-assets --registry=https://artifacts.iflytek.com/artifactory/api/npm/npm-repo/
 
 or
 
-yarn add @hw/svg-assets --registry=https://artifacts.iflytek.com/artifactory/api/npm/npm-repo/
+yarn add @ba/svg-assets --registry=https://artifacts.iflytek.com/artifactory/api/npm/npm-repo/
 ```
 
 ## Usage
 
 ```js
 // 获取所有资源列表
-import AssetsList from '@hw/svg-assets'
+import AssetsList from '@ba/svg-assets'
 
 // 导入部分资源(以 svg 示例)
-import goTopSvg from '@hw/svg-assets/assets/go-top.svg'
+import goTopSvg from '@ba/svg-assets/assets/go-top.svg'
 
 // 批量导入
 const requireAll = (requireContext) => requireContext.keys().map(requireContext)
-requireAll(require.context('@hw/svg-assets/assets', false, /\\.svg$/))
+requireAll(require.context('@ba/svg-assets/assets', false, /\\.svg$/))
 ```
 
 ## List
