chore(svg): 删除冗余代码

--- a/packages/svg-assets/stories/svg-assets.stories.mdx
+++ b/packages/svg-assets/stories/svg-assets.stories.mdx
@@ -13,11 +13,11 @@ import SvgTable from './svg-table'
 ## Install
 
 ```bash
-npm i @ba/svg-assets --registry=https://artifacts.iflytek.com/artifactory/api/npm/npm-repo/
+npm i @ba/svg-assets
 
 or
 
-yarn add @ba/svg-assets --registry=https://artifacts.iflytek.com/artifactory/api/npm/npm-repo/
+yarn add @ba/svg-assets
 ```
 
 ## Usage
