--- a/packages/intro.stories.mdx
+++ b/packages/intro.stories.mdx
@@ -90,6 +90,7 @@ npm i
 | <code>@ba/cli-demo</code>    | `cli`    | cli 例子   | `v1.0.0` | [jump](?path=/story/cli-baclidemo--page)            |
 | <code>@ba/conf-demo</code>   | `conf`   | conf 例子  | `v1.0.0` | [jump](?path=/story/conf-baconfdemo--page)          |
 | <code>@ba/gen-request</code> | `cli`    | 请求生成   | `v1.0.0` | [jump](?path=/story/cli-bagenrequest--page)         |
+| <code>@ba/const</code>       | `lib`    | 常量       | `v1.0.0` | [jump](?path=/story/libs-baconst--page)             |
 
 ## 贡献者
 
